--- a/main.html
+++ b/main.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+	<div class="container">
+		<div class="light green"></div>
+		<div class="light yellow"></div>
+		<div class="light red"></div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
